--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,6 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -17,6 +9,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea/
 
 npm-debug.log*
 yarn-debug.log*
