--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.idea/
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+node_modules
+.idea
+package-lock.json
+public/js
